ProjectBuilder: Fix the project builder.